# piper-tictactoe

./: .gitignore  README.md
docs-debug-other/: DOC-DE-MES-SOUCIS-ET-TOUT.txt  REAL-ROBOT-Positions_infos
piper_moves/: CMakeLists.txt  package.xml
piper_moves/launch/: joint_space_trajectory.launch.py  joint_space_trajectory_real.launch.py
piper_moves/src/: X_draw_trajectory.cpp  buffer.cpp  min_max_TicTacToe.cpp  piper_move_orders.cpp  real_poses.yaml  take_pic.cpp  take_pic_BACKUP_ORIGINAL.cpp  test-script.cpp  test_script.cpp
setup_scripts/: DOC-DE-MES-SOUCIS-ET-TOUT.txt  camera_setup.sh  dependencies_quick_fix.sh  git_config.sh  moveit.rviz  run_minMax-takePic-moveOrder.sh  spawn_things.sh  steps.txt  webpage-ROSBrige_run.sh  zenoh_install_debugs.txt
setup_scripts/real_robot/: other-version.sh  real-robot_bringup.sh
setup_scripts/simulation/: all_sim_launch.sh  delete_things.sh  run_minMax-takePic-moveOrder.sh  spawn_things.sh
webpage_ws/: current_stage.txt  index.html  main.js  style.css
